[package]
name = "octoack"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"]}
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.25.3"
toml = "0.5"
serde_json = "1.0.59"
